--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature android:name="android.hardware.camera.any" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.HerbalDetector">
         <activity
-            android:name=".UI.ExpertSystemActivity"
+            android:name=".ui.ExpertSystemActivity"
             android:exported="true" />
         <activity
-            android:name=".UI.ViewImageActivity"
+            android:name=".ui.clasify.ViewImageActivity"
             android:exported="true" />
         <activity
-            android:name=".DetectorActivity"
+            android:name=".ui.detector.DetectorActivity"
             android:exported="true" />
         <activity
             android:name=".GalleryActivity"
